--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="index.css" type="text/css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -24,6 +25,13 @@
   </style>
 </head>
 <body>
-  <video id="video" width="720" height="560" autoplay muted></video>
+  <div id="bluebg"></div>
+    <div class="triangle-left"></div>
+    <div class="triangle-right"></div>
+    <video id="video" width="720" height="560" autoplay muted></video>
+    <!-- <div class="logo-img">
+        <img class="logo" src="logo.png">
+    </div> -->
+  
 </body>
 </html>
