--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
   <div id="bluebg"></div>
-  <div class="ins`truction">
+  <div class="instruction">
     <img class="logo" src="logo.png">
     <p>Scan face to connect WiFi</p>
   </div>
 
   <div class="triangle-left"></div>
   <div class="triangle-right"></div>
-  <!-- <video id="video" width="400" height="400" autoplay muted></video> -->
+  <video id="video" width="400" height="400" autoplay muted></video>
   
 
   
