--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </div>
   <div class="triangle-left"></div>
   <div class="triangle-right"></div>
+  <video id="video" width="400" height="400" autoplay muted></video>
 
   
 </body>
