--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <div class="triangle-right"></div>
   <video id="video" width="400" height="400" autoplay muted></video>
   <h1> hello</h1>
+  <h1>hello</h1>
 </body>
 </html>
