--- a/index.html
+++ b/index.html
@@ -8,16 +8,27 @@
   <title>Document</title>
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
+  <script defer src="try.js"></script>
 </head>
 <body>
   <div id="bluebg"></div>
   <div class="instruction">
     <img class="logo" src="logo.png">
-    <p>Scan face to connect WiFi</p>
+    <p class="vid">Scan face to connect WiFi</p>
   </div>
-
+  
   <div class="triangle-left"></div>
   <div class="triangle-right"></div>
-  <video id="video" width="400" height="400" autoplay muted></video>
+
+  <div id="password">
+    <h1>WELCOME<br><span id="username">jeramelle</span></h1>
+    <div class="form">
+      <label for="pass">Please enter your password</label><br>
+      <input id="pass" type="password" placeholder="password" >
+    </div>
+    <button id="clickme">LOGIN</button>
+  </div>
+  <video id="video" class="vid" width="400" height="400" autoplay="" muted></video>
+  
 </body>
 </html>
