--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   <div class="triangle-right"></div>
 
   <div id="password">
-    <h1>WELCOME<br><span id="username">jeramelle</span></h1>
+    <h1>WELCOME<br><span id="username"></span></h1>
     <div class="form">
       <label for="pass">Please enter your password</label><br>
-      <input id="pass" type="password" placeholder="password" >
+      <input id="pass" type="password" placeholder="password" />
+      <p id="notif"></p>
     </div>
     <button id="clickme">LOGIN</button>
   </div>
