--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>WELCOME<br><span id="username"></span></h1>
     <div class="form">
       <label for="pass">Please enter your password</label><br>
-      <input id="pass" type="password" placeholder="password" />
+      <input id="pass" type="password" placeholder="password" /><br>
       <input type="checkbox" onclick="myFunction()">Show Password </input>
       <p id="notif"></p>
     </div>
