--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="form">
       <label for="pass">Please enter your password</label><br>
       <input id="pass" type="password" placeholder="password" /><br>
-      <input type="checkbox" onclick="myFunction()">Show Password </input>
+      <input  type="checkbox" id="show" onclick="myFunction()"/>
+      <label for="show">show password</label>
       <p id="notif"></p>
     </div>
     <button id="clickme">LOGIN</button>
