second page goods

--- a/second/index.html
+++ b/second/index.html
@@ -6,7 +6,7 @@
     <div class="triangle-left"></div>
     <div class="triangle-right"></div>
     <div class="logo-img">
-        <img class="logo" src="logo.png">
+        <img class="logo" src="../logo.png">
     </div>
 
     
