--- a/second/index.html
+++ b/second/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<link rel="icon" href="../logo.png" type="image/icon type">
+  <title>Authenticate</title>
 <link rel="stylesheet" href="index.css" type="text/css" />
 <body class="portal">
     <div id="bluebg"></div>
