--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <button id="clickme">LOGIN</button>
   </div>
-  <video id="video" class="vid" width="400" height="400" autoplay="" muted></video>
+  <video id="video" class="vid" autoplay="" muted></video>
   
 </body>
 </html>
