--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="instruction">
     <img class="logo" src="logo.png">
     <p class="vid">Scan face to connect WiFi</p>
-    <p id="text">f</p>
+    <p id="text">this is fixsing branch</p>
   </div>
   
   <div class="triangle-left"></div>
