--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" href="./logo.png" type="image/icon type">
   <title>Authenticate</title>
-  <script defer src="face-api.min.js"></script>
+  <script defer src="face-api.js"></script>
   <script defer src="script.js"></script>
   <script defer src="try.js"></script>
   <script>
