--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <link rel="stylesheet" href="index.css" type="text/css" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="icon" href="./logo.png" type="image/icon type">
   <title>Authenticate</title>
   <script defer src="face-api.min.js"></script>
